test_suite/tests/ui/fail/invalid_arg_count_in_option/invalid_option_option_min.rs
use clapi::macros::*;

#[command]
#[option(value, min=2)]
fn test(value: Option<i64>){}

fn main(){}