test_suite/tests/ui/fail/invalid_arg_count_in_option/invalid_option_option_min.stderr
error: custom attribute panicked
 --> $DIR/invalid_option_option_min.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: invalid number of arguments for `value : Option<i64>` expected from 0 to 1
